--- a/proj_news_blog/templates/post.html
+++ b/proj_news_blog/templates/post.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Welcome to Latest News</title>
-</head>
-<body>
-	<h1>{{ post.title }}</h1>
-	<hr>
-	<h3>{{ post.body }}</h3>
-	<br>
-	<p><a href="/news_01">back to HOME</a></p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}一般事務: {{ post.title }}{% endblock %}
+
+{% block headmessage %}
+	<h2>一般事務</h2>
+{% endblock %}
+
+{% block content %}
+<br>
+<h2>Title: {{ post.title }}</h2>
+<h3>Content: {{ post.body }}</h3>
+<br>
+<p><a href="/news_01">back to HOME</a></p>
+{% endblock %}
