--- a/proj_news_blog/templates/base.html
+++ b/proj_news_blog/templates/base.html
@@ -1,19 +1,31 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %} {% endblock %}</title>
+
+	<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+	<link href="{% static "js/bootstrap.min.js" %}">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 </head>
 <body>
-	<div style="background-color: #FFECC9">
+	<div class="alert alert-primary">
 		{% include 'header.html' %}
 	</div>
 
 	{% block headmessage %} {% endblock %}
 	{% block content %} {% endblock %}
 
-	<div style="background-color: #FFECC9">
+	<div class="alert alert-secondary">
 		{% include 'footer.html' %}
+	</div>
+
+	<img src="{% static "images/rabbit.png" %}" alt="" width="10%">
+	<div class="spinner-border text-warning" role="status">
+	  <span class="sr-only">Loading...</span>
 	</div>
 </body>
 </html>
