--- a/proj_news_blog/templates/footer.html
+++ b/proj_news_blog/templates/footer.html
@@ -1,6 +1,6 @@
 {% block footer %}
 	{% if now %}
-	<p>Current Time: {{ now }}</p>
+	<p>現在時刻: {{ now }}</p>
 	{% else %}
 	<p>if no Time, show this message.</p>
 	{% endif %}
