--- a/proj_news_blog/templates/base.html
+++ b/proj_news_blog/templates/base.html
@@ -10,6 +10,8 @@
 	<link href="{% static "js/bootstrap.min.js" %}">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+	<link rel="stylesheet" href="{% static "css/mystyle.css" %}">
 </head>
 <body>
 	<div class="container-fluid">
