--- a/proj_news_blog/templates/post.html
+++ b/proj_news_blog/templates/post.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load markdown_deux_tags %}
 
 {% block title %}一般事務: {{ post.title }}{% endblock %}
 
@@ -14,7 +15,7 @@
 	
 	<ul class="list-group list-group-flush">
 		<li class="list-group-item">
-			<h3>Content:<br><br>{{ post.body }}</h3>
+			<h3>Content:<br><br>{{ post.body | markdown}}</h3>
 			<br>
 			<p><a href="/news_01">back to HOME</a></p>
 		</li>
