File Uploads (整合至models.py的class Post)

--- a/proj_news_blog/app_news_mainsite/templates/post.html
+++ b/proj_news_blog/app_news_mainsite/templates/post.html
@@ -16,6 +16,13 @@
 	<ul class="list-group list-group-flush">
 		<li class="list-group-item">
 			<h3>Content:<br><br>{{ post.body | markdown}}</h3>
+
+			{% if post.post_files %}
+			<h3>post_files:</h3>
+			<img src="{{ post.post_files.url }}" width="70%">
+			{% else %}
+			<p>No post_files ~</p>
+			{% endif %}
 			<br>
 			<p><a href="/news_01">back to HOME</a></p>
 		</li>
